force-app/main/default/objects/vlocity_cmt__ProductAvailability__c/vlocity_cmt__ProductAvailability__c.object-meta.xml
<CustomObject>
    <description>Individual products and services may not be available in all geographical areas. For example, selected channels may not be authorized to broadcast within a given state or locale. Or a given telecommunications product may simply not yet be available in a given region. To accommodate such exclusions, &quot;rules&quot; regarding product availability can be defined. If a product is denoted as unavailable within a select state or zip code range, that product will not be suggested when creating a new order, opportunity, or quote, where the shipping address is in that state or zip code range.</description>
    <label>Product Not Available</label>
    <nameField>
        <label>Product Not Available Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Not Available</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>