force-app/main/default/objects/vlocity_cmt__ProductAvailability__c/fields/vlocity_cmt__City__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>