force-app/main/default/objects/vlocity_cmt__ProductAvailability__c/fields/vlocity_cmt__EndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>