force-app/main/default/objects/vlocity_cmt__ProductAvailability__c/fields/vlocity_cmt__FromPostalCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__FromPostalCode__c</fullName>
    <description>Start of range of zipcodes where service not available</description>
    <label>From Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>