force-app/main/default/objects/vlocity_cmt__ProductAvailability__c/fields/vlocity_cmt__RuleBasis__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__RuleBasis__c</fullName>
    <description>Level of rule, ex: Account, City, Postal Code, etc</description>
    <label>Rule Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Postal Code</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>