force-app/main/default/objects/vlocity_cmt__ProductAvailability__c/fields/vlocity_cmt__State__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>