force-app/main/default/objects/vlocity_cmt__ProductAvailability__c/fields/vlocity_cmt__ToPostalCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ToPostalCode__c</fullName>
    <description>End of range of zipcodes where service not available</description>
    <label>To Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>